# db2-project1

./: CMakeLists.txt  ISAM.cpp  ISAM.h  Informe.md  Menu.cpp  Menu.h  README.md  Record.cpp  Record.h  SequentialFile.cpp  SequentialFile.h  main.cpp
data/: stroke-data.csv
test/: Tester.cpp  Tester.h  buffer_test.cpp
utils/: Buffer.cpp  Buffer.h  CSV_Reader.cpp  CSV_Reader.h
